--- a/opleidingen/mediaM.html
+++ b/opleidingen/mediaM.html
@@ -4,17 +4,17 @@
 <head>
     <link rel="stylesheet" href="../css/Opleiding.css" />
     <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/opleidingen/av.css">
+    <link rel="stylesheet" href="../css/opleidingen/MediaM.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grafisch Lyceum - Media vormgeven</title>
+    <title>Grafisch Lyceum - Fotografie</title>
 </head>
 
 <body>
     <div class="header">
         <h1 class="opleidingTitel">
-            av- <br />
-            specialist
+            Media <br>
+            Manager
         </h1>
         <a href="../index.html"><img class="headerLogo" src="../media/GLRlogo_witkader.png" alt="Glr logo banner" /></a>
     </div>
@@ -51,18 +51,19 @@
         <section class="kop1">
             <h2>
                 Ontdek de Opleiding <br />
-                <span class="opleidingNaam">av-specialist</span>
+                <span class="opleidingNaam">Mediamanager</span>
             </h2>
             <p>
-                Ben jij graag bezig met beeld, geluid en vorm? En wil je hier op een professionele manier mee leren
-                werken? Dan is de
-                mbo-opleiding AV-specialist iets voor jou. Als AV-specialist werk je aan allerlei audiovisuele
-                producties, zoals
-                commercials, bedrijfsfilms, social media-content, live-registraties of dramaproducties.
+                Bedenk jij graag creatieve oplossingen, ben je ondernemend, kun je goed organiseren en neem je graag de
+                leiding? Dan is
+                de mbo-opleiding Mediamanager op jouw lijf geschreven. Als mediamanager werk je - samen met anderen -
+                aan
+                mediaprojecten. Denk aan productpromotie, radio- en tv-producties, tijdschriften, social media en
+                evenementen.
             </p>
         </section>
         <div class="textVlak1">
-            <h2 class="title">IS AV-SPECIALIST IETS VOOR JOU?</h2>
+            <h2 class="title">IS MEDIAMANAGER IETS VOOR JOU?</h2>
             <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <mask id="mask0_104_104" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="-1" y="-1" width="50"
                     height="50">
@@ -74,7 +75,8 @@
                         fill="white" stroke="white" />
                 </g>
             </svg>
-            <div class="platteTekst1">Je bent dol op techniek (licht, beeld en geluid).</div>
+            <div class="platteTekst1">Je bent creatief oplossend: als er een probleem is, dan bedenk jij een oplossing
+            </div>
             <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <mask id="mask0_104_104" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="-1" y="-1" width="50"
                     height="50">
@@ -86,7 +88,8 @@
                         fill="white" stroke="white" />
                 </g>
             </svg>
-            <div class="platteTekst1">Je bent creatief en je gaat graag met mensen om. </div>
+            <div class="platteTekst1">Je bent ondernemend: je staat vaak vooraan om dingen te regelen en aan te nemen.
+            </div>
         </div>
         <div class="square">
             <p></p>
@@ -103,7 +106,8 @@
                         fill="white" stroke="white" />
                 </g>
             </svg>
-            <div class="platteTekst1">Je vindt het geen probleem om in de avonduren en weekenden te werken.
+            <div class="platteTekst1">Je houdt van organiseren: jij bent in je vriendengroep diegene die uitjes plant en
+                organiseert.
             </div>
             <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <mask id="mask0_104_104" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="-1" y="-1" width="50"
@@ -116,7 +120,7 @@
                         fill="white" stroke="white" />
                 </g>
             </svg>
-            <div class="platteTekst1">Je kunt goed improviseren en je kunt probleemoplossend denken en werken.
+            <div class="platteTekst1">Je neemt graag de leiding: je kan goed samenwerken en stuurt anderen graag aan
             </div>
         </div>
         <div class="witVlak1">
@@ -125,10 +129,11 @@
         <div class="witVlak2">
             <p></p>
         </div>
-        <img src="https://s3-alpha-sig.figma.com/img/67d4/de9a/e158137da6130750f92da5edd016c7b4?Expires=1702252800&Signature=Lz~OOYwgy6VwwF9oBCIQjJyLcUtLFeQRLIxPBM4ujXC6EOMCXj1pNPBqSXjRoQThb6ebCiYZ5YdrR~2B3-41M-F89eDLnxUlbS2aMizwtuUccvz613lnZz1139ziRV8KjNpPjKzutRxT7BvV9qTVv6xFy1fogeDUDl~Vj1isufQRzIEsjyrQZGG15EKewbMLUYSxz67-Llmvs~fHPco56~eNjYctX24xJN1SgJiUJwUHxD7odciXK2T-r968jOa4YAXiiQeTOyf60dHNLXg-TEFaUZamA4ssl3BJAGb1IWwEutmJXtUvVINukaj43Var5sshKk0sQJSMlaK-U6BUuw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
-            alt="" class="img1">
+        <div class="img1Container"><img
+                src="https://s3-alpha-sig.figma.com/img/6166/ae8e/6f5bdf1ff3d3a508fc18a1dfe4a1ca6c?Expires=1702252800&Signature=iMyukS4keYWQI5ykgOJJ1FT8u9FnMDUiKLFaXL44dqPWkiMDmD601BVnrE511jAVWK7bwPIjG7SJeKG~H9Aa8aZvUbn~bhS7FMoajPnq663Pgtb~B-Zl6ZoelJSDC0V6zKhPmRMZbetLkCYdAy~5GU4utIKjc8vEXlZDVeCDVJI1xWifZukN19k5011y0M8N-KRwu8BR~G9w26rXBze8xCxb5OX9BbqOq-HA4mW4CwWctvGzWkutRLBxT1CirpILrPgu0ByRHZPlGLyczZbmM4vzZ8XrrD2CTiJ9rbsR0cRPMxTjPDxgXwmB-u1UnZhO42BrE1thZem7-BY9jZkznA__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+                alt="" class="img1"></div>
         <div class="img2Container"><img
-                src="https://s3-alpha-sig.figma.com/img/3694/15d8/18962573bf743e127c55470ed23a6c39?Expires=1702252800&Signature=deLjYB9~JEAfoaia7nIoYwBoDZwI~5Sl5N2iSpN-YkdoZYUJUETc3SaB04CDpNK1BjziRdzS6oIU~PUgXTe9nlmAXJLM0EIvbTkODDnq4KrVWAMvEy-nhUIvll0azmDz9WOfRTMZA84b-SFdEsT8wCKi96lypoQq~qQ6lehnghKenHpb4F6-zT0lHdxBRNfGzZXw7hLHUsLlyf8OxZt9TFDK6DD9-3asFSTzBqgm6fubBuA9CFRsjfaO4QUjax4Xr8~35UwXXuRvdKdJ4ON6aTLUVcydJOSUapNl728PeLDXuEkzSDZ3FibMezXFObynRDupCWg5j3TYKfOLjeikkA__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+                src="https://s3-alpha-sig.figma.com/img/1f77/3d48/59c95e2260a4db87ae976f21004723b4?Expires=1702252800&Signature=atACwwPM6MPV3Q~MsDhyxtIoZRFouKmGjtSDviApZpI9ma7UtW8odqnbJJnziN7JFCTWoocmeMEZoPjmWdxREsLeKn01NxTituBcVz8oCBh5M4hQnWj7X2UYnKcuWOWlAom6BNkM~Q5QgnpuL-JAVAVOQpG1ZkuVYo3Gm1wi2T2WpdnXFs-fRp5XJrHP8q7904zbttCinOJkF4Ek8-SQOMirBKFrZXy363V33H76Xxto2DDvcJJkSca56GbqrWpiNYcHQPhJhmJOeJdSXKtm7Hwr5w9C75QfKt7eXy4CgoksZvJCA3fI9ZLyRNGDLQxS6RMPmFhLWTVcp6CcFP0rgQ__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
                 alt="" class="img2"></div>
     </div>
     <p class="jaarOpbouwTitle"><span class="opleidingNaam">JAAR</span>OPBOUW</p>
@@ -137,22 +142,19 @@
         <center>
             <div class="jaar1">
                 <h4>JAAR 1</h4>
-                <p>Basis AV-vaardigheden, conceptontwikkeling, productie in groepen, montage, editen,
-                    nabewerking.</p>
+                <p>Leren creatieve ideeën omzetten in media-uitingen met software.</p>
             </div>
         </center>
         <center>
             <div class="jaar2">
                 <h4>JAAR 2</h4>
-                <p>Verdieping beroepsvakken, keuzedelen , individuele en teamopdrachten, voorbereiding stage,
-                    beroepsexamens.</p>
+                <p>Verdieping in mediavormgeving met echte opdrachten en teamwork.</p>
             </div>
         </center>
         <center>
             <div class="jaar3">
                 <h4>JAAR 3</h4>
-                <p>Stage, school voor verdieping, afstudeerproject, keuzedelen en beroepsexamens afsluiten,
-                    diploma.</p>
+                <p>Stage bij een bedrijf, zelfontwikkeling en voorbereiding op het beroepsexamen.</p>
             </div>
         </center>
 
