--- a/opleidingen/redactie.html
+++ b/opleidingen/redactie.html
@@ -4,17 +4,16 @@
 <head>
     <link rel="stylesheet" href="../css/Opleiding.css" />
     <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/opleidingen/av.css">
+    <link rel="stylesheet" href="../css/opleidingen/redactie.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grafisch Lyceum - Media vormgeven</title>
+    <title>Grafisch Lyceum - redactie medewerker</title>
 </head>
 
 <body>
     <div class="header">
         <h1 class="opleidingTitel">
-            av- <br />
-            specialist
+            Redactie <br> medewerker
         </h1>
         <a href="../index.html"><img class="headerLogo" src="../media/GLRlogo_witkader.png" alt="Glr logo banner" /></a>
     </div>
@@ -51,18 +50,20 @@
         <section class="kop1">
             <h2>
                 Ontdek de Opleiding <br />
-                <span class="opleidingNaam">av-specialist</span>
+                <span class="opleidingNaam">redactiemedewerker</span>
             </h2>
             <p>
-                Ben jij graag bezig met beeld, geluid en vorm? En wil je hier op een professionele manier mee leren
-                werken? Dan is de
-                mbo-opleiding AV-specialist iets voor jou. Als AV-specialist werk je aan allerlei audiovisuele
-                producties, zoals
-                commercials, bedrijfsfilms, social media-content, live-registraties of dramaproducties.
+                Hou je van taal, ben je nieuwsgierig van aard en altijd op zoek naar nieuws? Maak daar je beroep van! In
+                de
+                mbo-opleiding Redactiemedewerker draait alles om het maken van content voor onder meer social media,
+                magazines,
+                websites, televisie of radio. Je vertelt graag verhalen en weet hoe je een boodschap over moet brengen
+                in beeld, woord
+                en geluid.
             </p>
         </section>
         <div class="textVlak1">
-            <h2 class="title">IS AV-SPECIALIST IETS VOOR JOU?</h2>
+            <h2 class="title">IS REDACTIEMEDEWERKER IETS VOOR JOU?</h2>
             <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <mask id="mask0_104_104" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="-1" y="-1" width="50"
                     height="50">
@@ -74,7 +75,9 @@
                         fill="white" stroke="white" />
                 </g>
             </svg>
-            <div class="platteTekst1">Je bent dol op techniek (licht, beeld en geluid).</div>
+            <div class="platteTekst1">Jij vindt veel onderwerpen interessant en je houdt ervan om zaken tot in detail
+                uit te zoeken.
+            </div>
             <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <mask id="mask0_104_104" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="-1" y="-1" width="50"
                     height="50">
@@ -86,7 +89,8 @@
                         fill="white" stroke="white" />
                 </g>
             </svg>
-            <div class="platteTekst1">Je bent creatief en je gaat graag met mensen om. </div>
+            <div class="platteTekst1">Je vindt het leuk om verhalen op verschillende manieren te vertellen.
+            </div>
         </div>
         <div class="square">
             <p></p>
@@ -103,7 +107,7 @@
                         fill="white" stroke="white" />
                 </g>
             </svg>
-            <div class="platteTekst1">Je vindt het geen probleem om in de avonduren en weekenden te werken.
+            <div class="platteTekst1">Je bent vindingrijk en creatief in het bedenken van oplossingen.
             </div>
             <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <mask id="mask0_104_104" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="-1" y="-1" width="50"
@@ -116,7 +120,7 @@
                         fill="white" stroke="white" />
                 </g>
             </svg>
-            <div class="platteTekst1">Je kunt goed improviseren en je kunt probleemoplossend denken en werken.
+            <div class="platteTekst1">Je bent flexibel, gedreven en goed in Nederlands.
             </div>
         </div>
         <div class="witVlak1">
@@ -125,10 +129,11 @@
         <div class="witVlak2">
             <p></p>
         </div>
-        <img src="https://s3-alpha-sig.figma.com/img/67d4/de9a/e158137da6130750f92da5edd016c7b4?Expires=1702252800&Signature=Lz~OOYwgy6VwwF9oBCIQjJyLcUtLFeQRLIxPBM4ujXC6EOMCXj1pNPBqSXjRoQThb6ebCiYZ5YdrR~2B3-41M-F89eDLnxUlbS2aMizwtuUccvz613lnZz1139ziRV8KjNpPjKzutRxT7BvV9qTVv6xFy1fogeDUDl~Vj1isufQRzIEsjyrQZGG15EKewbMLUYSxz67-Llmvs~fHPco56~eNjYctX24xJN1SgJiUJwUHxD7odciXK2T-r968jOa4YAXiiQeTOyf60dHNLXg-TEFaUZamA4ssl3BJAGb1IWwEutmJXtUvVINukaj43Var5sshKk0sQJSMlaK-U6BUuw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
-            alt="" class="img1">
+        <div class="img1Container"><img
+                src="https://s3-alpha-sig.figma.com/img/a372/59c8/fcb96ad2cc28fd12855b397a763cf010?Expires=1702252800&Signature=T1nQJyEnQsei3xtOibNKrCF1Y8Jmb-vQKi0sxK7D7AOSO3JvVIgUjEZaubTN57CL9Nh5LESN3q18AUW-~PtdNuAW49KSgMNnT6fcIBApOgAIa1kp~K5H8iCuTxyRA3tijZmg5kT98G5tXl4HY3nmc9hvcfc4OyDvVsGGleUOs8XjKjpAeZX1P2JbGGJ005-i1MepKILzie-Xamf~ASxKDH2m9FGN0nvSvwgch7ms14AqifHaPBi41NJEwtKvfvEi9MmCg7Qz6tH8bjUkFEY4Sy8ZrY1NfYiaBkuEGGbmWnhDBPAbD7fbSSqVi38nScfrgtQLZApQ3T-pYAyiwN7tyg__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+                alt="" class="img1"></div>
         <div class="img2Container"><img
-                src="https://s3-alpha-sig.figma.com/img/3694/15d8/18962573bf743e127c55470ed23a6c39?Expires=1702252800&Signature=deLjYB9~JEAfoaia7nIoYwBoDZwI~5Sl5N2iSpN-YkdoZYUJUETc3SaB04CDpNK1BjziRdzS6oIU~PUgXTe9nlmAXJLM0EIvbTkODDnq4KrVWAMvEy-nhUIvll0azmDz9WOfRTMZA84b-SFdEsT8wCKi96lypoQq~qQ6lehnghKenHpb4F6-zT0lHdxBRNfGzZXw7hLHUsLlyf8OxZt9TFDK6DD9-3asFSTzBqgm6fubBuA9CFRsjfaO4QUjax4Xr8~35UwXXuRvdKdJ4ON6aTLUVcydJOSUapNl728PeLDXuEkzSDZ3FibMezXFObynRDupCWg5j3TYKfOLjeikkA__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+                src="https://s3-alpha-sig.figma.com/img/e066/4abf/094fa7789e02542ab3bc80b20f476463?Expires=1702252800&Signature=kRM480LM1j~130xE64f1bdWHOQlJ6OLkhO8NywNVQWtJiIgVl69kaSR1~q8dp45wbysy5G7kEhH4GCZXpFJcLKoGL2TaZ7iYHMXGnyzD7y8GztTCKZTW4XaINa6uX8bEy6MEyc7D7TwhxRZ-geIUESLW8spKtaXbwT76ips0EPLXsmHQhdUb-KaD5Rz3YkTpN6V8J4890sktH53L-o76OkNRAnLbd699c4creNhwKFq0YjdxvTQEPeC6dI7IxlExv0FYK145EPchGq5nGkhfZdGV3UKFP5OzZaonRD3owqdi4VgSFhllqcMMqDuVJ30ZrciQMKbRtWzhNJSZvd50uw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
                 alt="" class="img2"></div>
     </div>
     <p class="jaarOpbouwTitle"><span class="opleidingNaam">JAAR</span>OPBOUW</p>
@@ -137,22 +142,22 @@
         <center>
             <div class="jaar1">
                 <h4>JAAR 1</h4>
-                <p>Basis AV-vaardigheden, conceptontwikkeling, productie in groepen, montage, editen,
-                    nabewerking.</p>
+                <p>schrijven, interviewen, filmen, fotograferen, radio-items, beeldreportages, webpublicatie,
+                    beeld en geluid
+                    bewerken.</p>
             </div>
         </center>
         <center>
             <div class="jaar2">
                 <h4>JAAR 2</h4>
-                <p>Verdieping beroepsvakken, keuzedelen , individuele en teamopdrachten, voorbereiding stage,
-                    beroepsexamens.</p>
+                <p>Projecten in radio, tv, magazine of newsroom, voorbereiding op stage in jaar 3.</p>
             </div>
         </center>
         <center>
             <div class="jaar3">
                 <h4>JAAR 3</h4>
-                <p>Stage, school voor verdieping, afstudeerproject, keuzedelen en beroepsexamens afsluiten,
-                    diploma.</p>
+                <p>Jaar stage, afstuderen in tweede helft van stageperiode, praktijkervaring bij bedrijf of organisatie.
+                </p>
             </div>
         </center>
 
