--- a/opleidingen/software.html
+++ b/opleidingen/software.html
@@ -4,17 +4,18 @@
 <head>
     <link rel="stylesheet" href="../css/Opleiding.css" />
     <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/opleidingen/av.css">
+    <link rel="stylesheet" href="../css/opleidingen/software.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grafisch Lyceum - Media vormgeven</title>
+    <title>Grafisch Lyceum - Creative Software Developer</title>
 </head>
 
 <body>
     <div class="header">
         <h1 class="opleidingTitel">
-            av- <br />
-            specialist
+            Creative <br>
+            software <br>
+            Developer
         </h1>
         <a href="../index.html"><img class="headerLogo" src="../media/GLRlogo_witkader.png" alt="Glr logo banner" /></a>
     </div>
@@ -51,18 +52,20 @@
         <section class="kop1">
             <h2>
                 Ontdek de Opleiding <br />
-                <span class="opleidingNaam">av-specialist</span>
+                <span class="opleidingNaam">creative software developer</span>
             </h2>
             <p>
-                Ben jij graag bezig met beeld, geluid en vorm? En wil je hier op een professionele manier mee leren
-                werken? Dan is de
-                mbo-opleiding AV-specialist iets voor jou. Als AV-specialist werk je aan allerlei audiovisuele
-                producties, zoals
-                commercials, bedrijfsfilms, social media-content, live-registraties of dramaproducties.
+                Heb jij een passie voor de nieuwste technologie, media, design en ben je creatief? Dan is Creative
+                Software Developer de
+                opleiding voor jou. In deze mbo-opleiding leg je een brede basis in het maken van software, websites,
+                apps en andere
+                creatieve uitingen voor alle soorten schermen. Je leert programmeren, scripten, prompten, databases
+                ontwerpen,
+                projectmatig werken en visueel vormgeven.
             </p>
         </section>
         <div class="textVlak1">
-            <h2 class="title">IS AV-SPECIALIST IETS VOOR JOU?</h2>
+            <h2 class="title">IS CREATIVE SOFTWARE DEVELOPER IETS VOOR JOU?</h2>
             <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <mask id="mask0_104_104" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="-1" y="-1" width="50"
                     height="50">
@@ -74,7 +77,9 @@
                         fill="white" stroke="white" />
                 </g>
             </svg>
-            <div class="platteTekst1">Je bent dol op techniek (licht, beeld en geluid).</div>
+            <div class="platteTekst1">Je hebt veel belangstelling voor digitale technologie, visueel ontwerp en
+                multimedia.
+            </div>
             <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <mask id="mask0_104_104" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="-1" y="-1" width="50"
                     height="50">
@@ -86,7 +91,8 @@
                         fill="white" stroke="white" />
                 </g>
             </svg>
-            <div class="platteTekst1">Je bent creatief en je gaat graag met mensen om. </div>
+            <div class="platteTekst1">Je bent flexibel en creatief in het zoeken naar oplossingen.
+            </div>
         </div>
         <div class="square">
             <p></p>
@@ -103,7 +109,8 @@
                         fill="white" stroke="white" />
                 </g>
             </svg>
-            <div class="platteTekst1">Je vindt het geen probleem om in de avonduren en weekenden te werken.
+            <div class="platteTekst1">Je vindt het belangrijk om goed op de hoogte te blijven ontwikkelingen binnen en
+                buiten het creatieve vakgebied.
             </div>
             <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <mask id="mask0_104_104" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="-1" y="-1" width="50"
@@ -116,7 +123,7 @@
                         fill="white" stroke="white" />
                 </g>
             </svg>
-            <div class="platteTekst1">Je kunt goed improviseren en je kunt probleemoplossend denken en werken.
+            <div class="platteTekst1">Je vindt het leuk om met computers en diverse software te werken.
             </div>
         </div>
         <div class="witVlak1">
@@ -125,10 +132,11 @@
         <div class="witVlak2">
             <p></p>
         </div>
-        <img src="https://s3-alpha-sig.figma.com/img/67d4/de9a/e158137da6130750f92da5edd016c7b4?Expires=1702252800&Signature=Lz~OOYwgy6VwwF9oBCIQjJyLcUtLFeQRLIxPBM4ujXC6EOMCXj1pNPBqSXjRoQThb6ebCiYZ5YdrR~2B3-41M-F89eDLnxUlbS2aMizwtuUccvz613lnZz1139ziRV8KjNpPjKzutRxT7BvV9qTVv6xFy1fogeDUDl~Vj1isufQRzIEsjyrQZGG15EKewbMLUYSxz67-Llmvs~fHPco56~eNjYctX24xJN1SgJiUJwUHxD7odciXK2T-r968jOa4YAXiiQeTOyf60dHNLXg-TEFaUZamA4ssl3BJAGb1IWwEutmJXtUvVINukaj43Var5sshKk0sQJSMlaK-U6BUuw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
-            alt="" class="img1">
+        <div class="img1Container"><img
+                src="https://s3-alpha-sig.figma.com/img/86ee/ca1a/ed16db074c292520d1558af8d861400a?Expires=1702252800&Signature=MKOhDobnl9RHeNq8sfAlIGD42u75n9X8UcsHuljXV426eBXHOc-iYBnJ1GS3-1EQ5oQNPFEshMiJXA-oB4bxc0CZXYw90xKJnMwGdbJXwGQixPbsuMSF66rMyky1LAGvJ9dEhkn05vTmmM~4eo1E81rdE07NmkDZ6wYc3Lb3CLM-mFFB1q-8AVsSjASsOysDr7pLXfsjDEY4qqVVDEZAeUCkephlpcgMyDPnOXfxJYxIPhwrlRi1jU5jZSYXWTa15J1GxPyWGC4G1jifzmpDoUxhpwPXfGdHdMw~zdTbeA-fXoJA0U1gbNrUB8GCp2y0oP8yNy3K7F-5qpCb611iEg__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+                alt="" class="img1"></div>
         <div class="img2Container"><img
-                src="https://s3-alpha-sig.figma.com/img/3694/15d8/18962573bf743e127c55470ed23a6c39?Expires=1702252800&Signature=deLjYB9~JEAfoaia7nIoYwBoDZwI~5Sl5N2iSpN-YkdoZYUJUETc3SaB04CDpNK1BjziRdzS6oIU~PUgXTe9nlmAXJLM0EIvbTkODDnq4KrVWAMvEy-nhUIvll0azmDz9WOfRTMZA84b-SFdEsT8wCKi96lypoQq~qQ6lehnghKenHpb4F6-zT0lHdxBRNfGzZXw7hLHUsLlyf8OxZt9TFDK6DD9-3asFSTzBqgm6fubBuA9CFRsjfaO4QUjax4Xr8~35UwXXuRvdKdJ4ON6aTLUVcydJOSUapNl728PeLDXuEkzSDZ3FibMezXFObynRDupCWg5j3TYKfOLjeikkA__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+                src="https://s3-alpha-sig.figma.com/img/2fd6/06de/2f365040ee8bca213ef50b9bc4452e75?Expires=1702252800&Signature=nBIKtfo5zAcRuPIOEiQjQrG1n8RDp362ttSTkrYY5E2SoUuk96U06FS~6dQUa-3Zcz~cvOIZ8GLLQh7I2f1WmE7EnVnsdA9020BkpgeoMQLlAQiOKww3AlzV-A6g~rtqZu0Nw37nO5LvBYRNHtJr97V8R7~gbmms~uD9xkAirLSZEylQ0NMFJC9LhbrgQDQLCotviIRv3eRfmROEuYOlWV6kFhPryOdHv-lm~8C0QNyEjXpJqgrZ2np-675UH0iQvfoJw32m9AkN7BC5-pcvi3ef6IpzHmNZaZAifHAsUDPiETaNzqg9Hx3ZktGO20~bUyT3pOmAV8usbRk3QZDBdw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
                 alt="" class="img2"></div>
     </div>
     <p class="jaarOpbouwTitle"><span class="opleidingNaam">JAAR</span>OPBOUW</p>
@@ -137,22 +145,20 @@
         <center>
             <div class="jaar1">
                 <h4>JAAR 1</h4>
-                <p>Basis AV-vaardigheden, conceptontwikkeling, productie in groepen, montage, editen,
-                    nabewerking.</p>
+                <p>Kennismaking hard- en software, programmeren, softwareontwerp, algemene minor met Digital
+                    Signage.</p>
             </div>
         </center>
         <center>
             <div class="jaar2">
                 <h4>JAAR 2</h4>
-                <p>Verdieping beroepsvakken, keuzedelen , individuele en teamopdrachten, voorbereiding stage,
-                    beroepsexamens.</p>
+                <p>Verdieping in programmeertalen, gekozen minor, eindopdracht, voorbereiding op stage in jaar 3.</p>
             </div>
         </center>
         <center>
             <div class="jaar3">
                 <h4>JAAR 3</h4>
-                <p>Stage, school voor verdieping, afstudeerproject, keuzedelen en beroepsexamens afsluiten,
-                    diploma.</p>
+                <p>Stage bij bedrijf, praktijkervaring opdoen, beroepsexamen.</p>
             </div>
         </center>
 
