--- a/opleidingen/system.html
+++ b/opleidingen/system.html
@@ -4,17 +4,16 @@
 <head>
     <link rel="stylesheet" href="../css/Opleiding.css" />
     <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/opleidingen/av.css">
+    <link rel="stylesheet" href="../css/opleidingen/system.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grafisch Lyceum - Media vormgeven</title>
+    <title>Grafisch Lyceum - EXPERT IT SYSTEMS & DEVICES</title>
 </head>
 
 <body>
     <div class="header">
         <h1 class="opleidingTitel">
-            av- <br />
-            specialist
+            EXPERT IT <br> SYSTEMS & <br> DEVICES
         </h1>
         <a href="../index.html"><img class="headerLogo" src="../media/GLRlogo_witkader.png" alt="Glr logo banner" /></a>
     </div>
@@ -51,18 +50,18 @@
         <section class="kop1">
             <h2>
                 Ontdek de Opleiding <br />
-                <span class="opleidingNaam">av-specialist</span>
+                <span class="opleidingNaam">it system & devices</span>
             </h2>
             <p>
-                Ben jij graag bezig met beeld, geluid en vorm? En wil je hier op een professionele manier mee leren
-                werken? Dan is de
-                mbo-opleiding AV-specialist iets voor jou. Als AV-specialist werk je aan allerlei audiovisuele
-                producties, zoals
-                commercials, bedrijfsfilms, social media-content, live-registraties of dramaproducties.
+                Houd jij van smart technology en heb je veel belangstelling voor media? Dan is de mbo-opleiding Expert
+                IT Systems &
+                Devices iets voor jou. In deze opleiding word je opgeleid tot IT’er met specialistische kennis van
+                beeld, licht, geluid
+                en alle IT-technologie die achter de media schuilgaat
             </p>
         </section>
         <div class="textVlak1">
-            <h2 class="title">IS AV-SPECIALIST IETS VOOR JOU?</h2>
+            <h2 class="title">IS IT SYSTEM & DEVICES IETS VOOR JOU?</h2>
             <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <mask id="mask0_104_104" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="-1" y="-1" width="50"
                     height="50">
@@ -74,7 +73,8 @@
                         fill="white" stroke="white" />
                 </g>
             </svg>
-            <div class="platteTekst1">Je bent dol op techniek (licht, beeld en geluid).</div>
+            <div class="platteTekst1">Je bent creatief in het zoeken naar oplossingen voor technologische vraagstukken.
+            </div>
             <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <mask id="mask0_104_104" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="-1" y="-1" width="50"
                     height="50">
@@ -86,7 +86,8 @@
                         fill="white" stroke="white" />
                 </g>
             </svg>
-            <div class="platteTekst1">Je bent creatief en je gaat graag met mensen om. </div>
+            <div class="platteTekst1">Je hebt veel belangstelling voor smart technology en media.
+            </div>
         </div>
         <div class="square">
             <p></p>
@@ -103,20 +104,8 @@
                         fill="white" stroke="white" />
                 </g>
             </svg>
-            <div class="platteTekst1">Je vindt het geen probleem om in de avonduren en weekenden te werken.
-            </div>
-            <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <mask id="mask0_104_104" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="-1" y="-1" width="50"
-                    height="50">
-                    <rect x="-0.5" y="-0.5" width="49" height="49" fill="#D9D9D9" stroke="white" />
-                </mask>
-                <g mask="url(#mask0_104_104)">
-                    <path
-                        d="M18.7466 36.3535L19.1002 36.7071L19.4537 36.3535L40.6538 15.1535L41.0073 14.8L40.6538 14.4464L37.8038 11.5964L37.4502 11.2428L37.0966 11.5964L19.1002 29.5928L10.9037 21.3964L10.5502 21.0428L10.1966 21.3964L7.34664 24.2464L6.99309 24.6L7.34664 24.9535L18.7466 36.3535Z"
-                        fill="white" stroke="white" />
-                </g>
-            </svg>
-            <div class="platteTekst1">Je kunt goed improviseren en je kunt probleemoplossend denken en werken.
+            <div class="platteTekst1">Je vindt het belangrijk om goed op de hoogte te blijven van de ontwikkelingen
+                binnen dit vakgebied.
             </div>
         </div>
         <div class="witVlak1">
@@ -125,10 +114,11 @@
         <div class="witVlak2">
             <p></p>
         </div>
-        <img src="https://s3-alpha-sig.figma.com/img/67d4/de9a/e158137da6130750f92da5edd016c7b4?Expires=1702252800&Signature=Lz~OOYwgy6VwwF9oBCIQjJyLcUtLFeQRLIxPBM4ujXC6EOMCXj1pNPBqSXjRoQThb6ebCiYZ5YdrR~2B3-41M-F89eDLnxUlbS2aMizwtuUccvz613lnZz1139ziRV8KjNpPjKzutRxT7BvV9qTVv6xFy1fogeDUDl~Vj1isufQRzIEsjyrQZGG15EKewbMLUYSxz67-Llmvs~fHPco56~eNjYctX24xJN1SgJiUJwUHxD7odciXK2T-r968jOa4YAXiiQeTOyf60dHNLXg-TEFaUZamA4ssl3BJAGb1IWwEutmJXtUvVINukaj43Var5sshKk0sQJSMlaK-U6BUuw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
-            alt="" class="img1">
+        <div class="img1Container"><img
+                src="https://s3-alpha-sig.figma.com/img/6125/ad3a/a8cc150acac984336c0a5b503ad64ed8?Expires=1702252800&Signature=lVOGyZEm9O-sxb05tYiObsqMXb-kLuxizyMlAdBdmOxd15RdwQaQ05B2L3zLtj9Q0COYCV1UURSnwwq-2DxkvX~EDzBQuwdjcfC-43JdcKI~6qNfUsQ~I7H6OTIaDVLQ9HOGon~YM9JMRMcjQ2c4Ft~qFPN4qhREWb4621e~w2tndXHgBj7ayOOGYMOTmqRi66TRwtPNv2XmBEvQZ7QrnzIoKohC6kTgd5zypWgsJYNR3w28pQHbXNZcbataLhCNi9wwA-B5ham4gGRK-ZjGUYCMz~cuanpu8e1KuDVv5v-z1~fuo05sBN6my8P-oeP4A2a2j6Shudy2izmUkwuX1A__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+                alt="" class="img1"></div>
         <div class="img2Container"><img
-                src="https://s3-alpha-sig.figma.com/img/3694/15d8/18962573bf743e127c55470ed23a6c39?Expires=1702252800&Signature=deLjYB9~JEAfoaia7nIoYwBoDZwI~5Sl5N2iSpN-YkdoZYUJUETc3SaB04CDpNK1BjziRdzS6oIU~PUgXTe9nlmAXJLM0EIvbTkODDnq4KrVWAMvEy-nhUIvll0azmDz9WOfRTMZA84b-SFdEsT8wCKi96lypoQq~qQ6lehnghKenHpb4F6-zT0lHdxBRNfGzZXw7hLHUsLlyf8OxZt9TFDK6DD9-3asFSTzBqgm6fubBuA9CFRsjfaO4QUjax4Xr8~35UwXXuRvdKdJ4ON6aTLUVcydJOSUapNl728PeLDXuEkzSDZ3FibMezXFObynRDupCWg5j3TYKfOLjeikkA__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+                src="https://s3-alpha-sig.figma.com/img/cb41/bb8a/d7ed97e8311eac2fc40edb8d1cfae537?Expires=1702252800&Signature=UkTsSEbx7JQktqHEpBEMiPNWsYkYYtIG6s5HE5DAE7D2Pr5Erl88ank71ROawSc5rPUbQfR0CQn1oTbT0WzYAD5tRWgjU6D-LzzLTlEMyG91XIQmz3GtmpQIuS24wYW7FENOI5KVdR99ln-KoEAWwlnoRYSwr~tdMtASgrh96QyDUv39L-YLnFXEwuLtdkFeKMxMg0o7ngfK9TOWbpwJhpZlnTV4UsDZJFOaSjTdXDaBZIBmTSbtaME9dizWUesX5E4JV9u68t6PQaIo-wlac8EEnLufNTA8bvtcRj817f1jyk0VrkEAaeWj-hdRe3L0L1FSIYkURWOs6R3HLWiZ6Q__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
                 alt="" class="img2"></div>
     </div>
     <p class="jaarOpbouwTitle"><span class="opleidingNaam">JAAR</span>OPBOUW</p>
@@ -137,22 +127,21 @@
         <center>
             <div class="jaar1">
                 <h4>JAAR 1</h4>
-                <p>Basis AV-vaardigheden, conceptontwikkeling, productie in groepen, montage, editen,
-                    nabewerking.</p>
+                <p>Kennismaking met IT-aspecten, netwerken, broadcast, live streaming, controlesystemen,
+                    specialisatiekeuze.</p>
             </div>
         </center>
         <center>
             <div class="jaar2">
                 <h4>JAAR 2</h4>
-                <p>Verdieping beroepsvakken, keuzedelen , individuele en teamopdrachten, voorbereiding stage,
-                    beroepsexamens.</p>
+                <p>Specialisatie verdieping, IT-theorie, algemene vakken, stagevoorbereiding, beroepsexamens..</p>
             </div>
         </center>
         <center>
             <div class="jaar3">
                 <h4>JAAR 3</h4>
-                <p>Stage, school voor verdieping, afstudeerproject, keuzedelen en beroepsexamens afsluiten,
-                    diploma.</p>
+                <p>Stage bij bedrijf, praktijkervaring opdoen, afstuderen met portfolio van bewijzen verzameld tijdens
+                    stage.</p>
             </div>
         </center>
 
