--- a/opleidingen/foto.html
+++ b/opleidingen/foto.html
@@ -4,17 +4,17 @@
 <head>
     <link rel="stylesheet" href="../css/Opleiding.css" />
     <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/opleidingen/av.css">
+    <link rel="stylesheet" href="../css/opleidingen/foto.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grafisch Lyceum - Media vormgeven</title>
+    <title>Grafisch Lyceum - Fotografie</title>
 </head>
 
 <body>
     <div class="header">
         <h1 class="opleidingTitel">
-            av- <br />
-            specialist
+            &nbsp;<br>
+            Fotografie
         </h1>
         <a href="../index.html"><img class="headerLogo" src="../media/GLRlogo_witkader.png" alt="Glr logo banner" /></a>
     </div>
@@ -51,18 +51,17 @@
         <section class="kop1">
             <h2>
                 Ontdek de Opleiding <br />
-                <span class="opleidingNaam">av-specialist</span>
+                <span class="opleidingNaam">Fotografie</span>
             </h2>
             <p>
-                Ben jij graag bezig met beeld, geluid en vorm? En wil je hier op een professionele manier mee leren
-                werken? Dan is de
-                mbo-opleiding AV-specialist iets voor jou. Als AV-specialist werk je aan allerlei audiovisuele
-                producties, zoals
-                commercials, bedrijfsfilms, social media-content, live-registraties of dramaproducties.
+                Ben jij creatief en heb je gevoel voor beeld? Dan is de mbo-opleiding Fotografie iets voor jou. In deze
+                opleiding word
+                je zowel in de studio als op locatie opgeleid tot een ondernemend en zelfstandig vakfotograaf mét een
+                eigen stijl.
             </p>
         </section>
         <div class="textVlak1">
-            <h2 class="title">IS AV-SPECIALIST IETS VOOR JOU?</h2>
+            <h2 class="title">IS FOTOGRAFIE IETS VOOR JOU?</h2>
             <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <mask id="mask0_104_104" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="-1" y="-1" width="50"
                     height="50">
@@ -74,7 +73,7 @@
                         fill="white" stroke="white" />
                 </g>
             </svg>
-            <div class="platteTekst1">Je bent dol op techniek (licht, beeld en geluid).</div>
+            <div class="platteTekst1">Je bent creatief en je hebt gevoel voor beeld.</div>
             <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <mask id="mask0_104_104" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="-1" y="-1" width="50"
                     height="50">
@@ -86,7 +85,7 @@
                         fill="white" stroke="white" />
                 </g>
             </svg>
-            <div class="platteTekst1">Je bent creatief en je gaat graag met mensen om. </div>
+            <div class="platteTekst1">Je hebt technisch inzicht en je houdt van het werken met apparatuur. </div>
         </div>
         <div class="square">
             <p></p>
@@ -103,7 +102,7 @@
                         fill="white" stroke="white" />
                 </g>
             </svg>
-            <div class="platteTekst1">Je vindt het geen probleem om in de avonduren en weekenden te werken.
+            <div class="platteTekst1">Je kunt je goed verplaatsen in andere personen en je bent klantgericht.
             </div>
             <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <mask id="mask0_104_104" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="-1" y="-1" width="50"
@@ -116,7 +115,7 @@
                         fill="white" stroke="white" />
                 </g>
             </svg>
-            <div class="platteTekst1">Je kunt goed improviseren en je kunt probleemoplossend denken en werken.
+            <div class="platteTekst1">Je werkt graag zelfstandig en je bent accuraat en nauwkeurig.
             </div>
         </div>
         <div class="witVlak1">
@@ -125,10 +124,11 @@
         <div class="witVlak2">
             <p></p>
         </div>
-        <img src="https://s3-alpha-sig.figma.com/img/67d4/de9a/e158137da6130750f92da5edd016c7b4?Expires=1702252800&Signature=Lz~OOYwgy6VwwF9oBCIQjJyLcUtLFeQRLIxPBM4ujXC6EOMCXj1pNPBqSXjRoQThb6ebCiYZ5YdrR~2B3-41M-F89eDLnxUlbS2aMizwtuUccvz613lnZz1139ziRV8KjNpPjKzutRxT7BvV9qTVv6xFy1fogeDUDl~Vj1isufQRzIEsjyrQZGG15EKewbMLUYSxz67-Llmvs~fHPco56~eNjYctX24xJN1SgJiUJwUHxD7odciXK2T-r968jOa4YAXiiQeTOyf60dHNLXg-TEFaUZamA4ssl3BJAGb1IWwEutmJXtUvVINukaj43Var5sshKk0sQJSMlaK-U6BUuw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
-            alt="" class="img1">
+        <div class="img1Container"><img
+                src="https://s3-alpha-sig.figma.com/img/bca2/4cee/82b984f80955e5c0a4d9d1312db6efc1?Expires=1702252800&Signature=ahTC15IqP7SgpD6FPKkYvVgLytX8wKYM6tcvT6mmkt58uSYWmVRHFajBTXz~P01W5p0xOpj6WytaZG0ua5aW44td52jFF2BrCAEOvkOgklj3-FdceY3b9AJ~9PDblztNZGarZ3-UbPNJ7VCOSyD5cryFdwjR51TLI23PHVe9G4f~lnXblFpM4buPsCPOxx4S8R0tHc~bAMDdILeu2HyFfExT482HuJxnvoy1N7BFUwhJmr9gi6X~sfIFIoBF3qP45V~NxLgwxlpPIlSX19pvb7ZZdkG2eWkYyjE2X92HnAumYAWS-aOkZrYQye0weCzvDqaqcGQ8unYHksMh6FEgnA__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+                alt="" class="img1"></div>
         <div class="img2Container"><img
-                src="https://s3-alpha-sig.figma.com/img/3694/15d8/18962573bf743e127c55470ed23a6c39?Expires=1702252800&Signature=deLjYB9~JEAfoaia7nIoYwBoDZwI~5Sl5N2iSpN-YkdoZYUJUETc3SaB04CDpNK1BjziRdzS6oIU~PUgXTe9nlmAXJLM0EIvbTkODDnq4KrVWAMvEy-nhUIvll0azmDz9WOfRTMZA84b-SFdEsT8wCKi96lypoQq~qQ6lehnghKenHpb4F6-zT0lHdxBRNfGzZXw7hLHUsLlyf8OxZt9TFDK6DD9-3asFSTzBqgm6fubBuA9CFRsjfaO4QUjax4Xr8~35UwXXuRvdKdJ4ON6aTLUVcydJOSUapNl728PeLDXuEkzSDZ3FibMezXFObynRDupCWg5j3TYKfOLjeikkA__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+                src="https://s3-alpha-sig.figma.com/img/472d/a153/df37ae7e5f38675cf0db7d03f1189cfd?Expires=1702252800&Signature=oGO9nExlHfKX26ISk6YWAcNHXYMiPFqJ7OSdqijnhsoryOic6EgjAG92ySFkV~tZHHZ8nMVZ8oFdIvLsltP9IwnGLI~8lXFVPkuYgHWbRFPRPF4eMVb3EbE3pNae~ZpME6hwdhTEhsEFKkdZtv2-7ffeR9nsBZFyJr-J2xcMWpPFrvfxeY7hL~RoGAorBUDBa3MRz8aLJ3GWv6yiLYx06dkoOP4pb0DSEq-JEQSOz2enwsnUczJiuDvII74qgWVXWh7lIofn~tfCp-i9~I1De2stRYPHpYYUlR5oKbFh9ZZ2lDt9sOPQhN3J32AsXxOnq1MNJZ-pFQpiF9FIotLNWQ__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
                 alt="" class="img2"></div>
     </div>
     <p class="jaarOpbouwTitle"><span class="opleidingNaam">JAAR</span>OPBOUW</p>
@@ -137,22 +137,23 @@
         <center>
             <div class="jaar1">
                 <h4>JAAR 1</h4>
-                <p>Basis AV-vaardigheden, conceptontwikkeling, productie in groepen, montage, editen,
-                    nabewerking.</p>
+                <p>Basis fotografie, camera-instellingen, softwaregebruik, ontwikkeling eigen stijl,
+                    beroepsmogelijkheden.</p>
             </div>
         </center>
         <center>
             <div class="jaar2">
                 <h4>JAAR 2</h4>
-                <p>Verdieping beroepsvakken, keuzedelen , individuele en teamopdrachten, voorbereiding stage,
+                <p>Praktijkverdieping, keuze specialisatie, voorbereiding stage, praktijkervaring bij bedrijf of
+                    zelfstandig,
                     beroepsexamens.</p>
             </div>
         </center>
         <center>
             <div class="jaar3">
                 <h4>JAAR 3</h4>
-                <p>Stage, school voor verdieping, afstudeerproject, keuzedelen en beroepsexamens afsluiten,
-                    diploma.</p>
+                <p>Tweede deel stage, afstuderen met expositie, showcase van persoonlijke fotografische
+                    prestaties.</p>
             </div>
         </center>
 
