--- a/opleidingen/mediaMaker.html
+++ b/opleidingen/mediaMaker.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="../css/Opleiding.css" />
     <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/opleidingen/av.css">
+    <link rel="stylesheet" href="../css/opleidingen/MediaMaker.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grafisch Lyceum - Media vormgeven</title>
@@ -13,8 +13,8 @@
 <body>
     <div class="header">
         <h1 class="opleidingTitel">
-            av- <br />
-            specialist
+            &nbsp; <br />
+            mediamaker
         </h1>
         <a href="../index.html"><img class="headerLogo" src="../media/GLRlogo_witkader.png" alt="Glr logo banner" /></a>
     </div>
@@ -27,14 +27,14 @@
                         d="M11.2278 17.7778L8.12222 14.6722C7.85741 14.4074 7.52037 14.275 7.11111 14.275C6.70185 14.275 6.36481 14.4074 6.1 14.6722C5.83519 14.937 5.70278 15.2741 5.70278 15.6833C5.70278 16.0926 5.83519 16.4296 6.1 16.6944L10.2167 20.8111C10.5056 21.1 10.8426 21.2444 11.2278 21.2444C11.613 21.2444 11.95 21.1 12.2389 20.8111L20.4 12.65C20.6648 12.3852 20.7972 12.0481 20.7972 11.6389C20.7972 11.2296 20.6648 10.8926 20.4 10.6278C20.1352 10.3629 19.7981 10.2305 19.3889 10.2305C18.9796 10.2305 18.6426 10.3629 18.3778 10.6278L11.2278 17.7778ZM3.13889 28.9722C2.34444 28.9722 1.66435 28.6893 1.09861 28.1236C0.53287 27.5578 0.25 26.8778 0.25 26.0833V5.86109C0.25 5.06665 0.53287 4.38655 1.09861 3.82081C1.66435 3.25507 2.34444 2.9722 3.13889 2.9722H9.20556C9.51852 2.10554 10.0421 1.40739 10.7764 0.877757C11.5106 0.348128 12.3352 0.083313 13.25 0.083313C14.1648 0.083313 14.9894 0.348128 15.7236 0.877757C16.4579 1.40739 16.9815 2.10554 17.2944 2.9722H23.3611C24.1556 2.9722 24.8356 3.25507 25.4014 3.82081C25.9671 4.38655 26.25 5.06665 26.25 5.86109V26.0833C26.25 26.8778 25.9671 27.5578 25.4014 28.1236C24.8356 28.6893 24.1556 28.9722 23.3611 28.9722H3.13889ZM3.13889 26.0833H23.3611V5.86109H3.13889V26.0833ZM13.25 4.77776C13.563 4.77776 13.8218 4.67544 14.0264 4.47081C14.231 4.26618 14.3333 4.00739 14.3333 3.69442C14.3333 3.38146 14.231 3.12266 14.0264 2.91804C13.8218 2.71341 13.563 2.61109 13.25 2.61109C12.937 2.61109 12.6782 2.71341 12.4736 2.91804C12.269 3.12266 12.1667 3.38146 12.1667 3.69442C12.1667 4.00739 12.269 4.26618 12.4736 4.47081C12.6782 4.67544 12.937 4.77776 13.25 4.77776Z" />
                 </svg>
 
-                &nbsp; Niveau: 4 &nbsp;&nbsp;&nbsp;
+                &nbsp; Niveau: 2 &nbsp;&nbsp;&nbsp;
                 <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path id="explore"
                         d="M13 14.025C12.6317 14.025 12.3229 13.9028 12.0738 13.6584C11.8246 13.4141 11.7 13.1112 11.7 12.75C11.7 12.3888 11.8246 12.0859 12.0738 11.8416C12.3229 11.5972 12.6317 11.475 13 11.475C13.3683 11.475 13.6771 11.5972 13.9263 11.8416C14.1754 12.0859 14.3 12.3888 14.3 12.75C14.3 13.1112 14.1754 13.4141 13.9263 13.6584C13.6771 13.9028 13.3683 14.025 13 14.025ZM13 25.5C11.2017 25.5 9.51167 25.1653 7.93 24.4959C6.34833 23.8266 4.9725 22.9181 3.8025 21.7706C2.6325 20.6231 1.70625 19.2738 1.02375 17.7225C0.34125 16.1713 0 14.5138 0 12.75C0 10.9862 0.34125 9.32875 1.02375 7.7775C1.70625 6.22625 2.6325 4.87688 3.8025 3.72938C4.9725 2.58187 6.34833 1.67344 7.93 1.00406C9.51167 0.334688 11.2017 0 13 0C14.7983 0 16.4883 0.334688 18.07 1.00406C19.6517 1.67344 21.0275 2.58187 22.1975 3.72938C23.3675 4.87688 24.2938 6.22625 24.9763 7.7775C25.6588 9.32875 26 10.9862 26 12.75C26 14.5138 25.6588 16.1713 24.9763 17.7225C24.2938 19.2738 23.3675 20.6231 22.1975 21.7706C21.0275 22.9181 19.6517 23.8266 18.07 24.4959C16.4883 25.1653 14.7983 25.5 13 25.5ZM13 22.95C15.9033 22.95 18.3625 21.9619 20.3775 19.9856C22.3925 18.0094 23.4 15.5975 23.4 12.75C23.4 9.9025 22.3925 7.49063 20.3775 5.51438C18.3625 3.53813 15.9033 2.55 13 2.55C10.0967 2.55 7.6375 3.53813 5.6225 5.51438C3.6075 7.49063 2.6 9.9025 2.6 12.75C2.6 15.5975 3.6075 18.0094 5.6225 19.9856C7.6375 21.9619 10.0967 22.95 13 22.95ZM7.0525 19.2206L15.1775 15.4913C15.3075 15.4275 15.4267 15.3425 15.535 15.2363C15.6433 15.13 15.73 15.0131 15.795 14.8856L19.5975 6.91688C19.7058 6.70438 19.6788 6.51844 19.5163 6.35906C19.3538 6.19969 19.1642 6.17313 18.9475 6.27938L10.8225 10.0087C10.6925 10.0725 10.5733 10.1575 10.465 10.2638C10.3567 10.37 10.27 10.4869 10.205 10.6144L6.4025 18.5831C6.29417 18.7956 6.32125 18.9816 6.48375 19.1409C6.64625 19.3003 6.83583 19.3269 7.0525 19.2206Z" />
                 </svg>
 
 
-                &nbsp;&nbsp; Duration: 3 jaar &nbsp;&nbsp;
+                &nbsp;&nbsp; Duration: 2 jaar &nbsp;&nbsp;
                 <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path id="explore"
                         d="M13 14.025C12.6317 14.025 12.3229 13.9028 12.0738 13.6584C11.8246 13.4141 11.7 13.1112 11.7 12.75C11.7 12.3888 11.8246 12.0859 12.0738 11.8416C12.3229 11.5972 12.6317 11.475 13 11.475C13.3683 11.475 13.6771 11.5972 13.9263 11.8416C14.1754 12.0859 14.3 12.3888 14.3 12.75C14.3 13.1112 14.1754 13.4141 13.9263 13.6584C13.6771 13.9028 13.3683 14.025 13 14.025ZM13 25.5C11.2017 25.5 9.51167 25.1653 7.93 24.4959C6.34833 23.8266 4.9725 22.9181 3.8025 21.7706C2.6325 20.6231 1.70625 19.2738 1.02375 17.7225C0.34125 16.1713 0 14.5138 0 12.75C0 10.9862 0.34125 9.32875 1.02375 7.7775C1.70625 6.22625 2.6325 4.87688 3.8025 3.72938C4.9725 2.58187 6.34833 1.67344 7.93 1.00406C9.51167 0.334688 11.2017 0 13 0C14.7983 0 16.4883 0.334688 18.07 1.00406C19.6517 1.67344 21.0275 2.58187 22.1975 3.72938C23.3675 4.87688 24.2938 6.22625 24.9763 7.7775C25.6588 9.32875 26 10.9862 26 12.75C26 14.5138 25.6588 16.1713 24.9763 17.7225C24.2938 19.2738 23.3675 20.6231 22.1975 21.7706C21.0275 22.9181 19.6517 23.8266 18.07 24.4959C16.4883 25.1653 14.7983 25.5 13 25.5ZM13 22.95C15.9033 22.95 18.3625 21.9619 20.3775 19.9856C22.3925 18.0094 23.4 15.5975 23.4 12.75C23.4 9.9025 22.3925 7.49063 20.3775 5.51438C18.3625 3.53813 15.9033 2.55 13 2.55C10.0967 2.55 7.6375 3.53813 5.6225 5.51438C3.6075 7.49063 2.6 9.9025 2.6 12.75C2.6 15.5975 3.6075 18.0094 5.6225 19.9856C7.6375 21.9619 10.0967 22.95 13 22.95ZM7.0525 19.2206L15.1775 15.4913C15.3075 15.4275 15.4267 15.3425 15.535 15.2363C15.6433 15.13 15.73 15.0131 15.795 14.8856L19.5975 6.91688C19.7058 6.70438 19.6788 6.51844 19.5163 6.35906C19.3538 6.19969 19.1642 6.17313 18.9475 6.27938L10.8225 10.0087C10.6925 10.0725 10.5733 10.1575 10.465 10.2638C10.3567 10.37 10.27 10.4869 10.205 10.6144L6.4025 18.5831C6.29417 18.7956 6.32125 18.9816 6.48375 19.1409C6.64625 19.3003 6.83583 19.3269 7.0525 19.2206Z" />
@@ -51,18 +51,18 @@
         <section class="kop1">
             <h2>
                 Ontdek de Opleiding <br />
-                <span class="opleidingNaam">av-specialist</span>
+                <span class="opleidingNaam">Mediamaker</span>
             </h2>
             <p>
-                Ben jij graag bezig met beeld, geluid en vorm? En wil je hier op een professionele manier mee leren
-                werken? Dan is de
-                mbo-opleiding AV-specialist iets voor jou. Als AV-specialist werk je aan allerlei audiovisuele
-                producties, zoals
-                commercials, bedrijfsfilms, social media-content, live-registraties of dramaproducties.
+                Ben jij gek op media en creativiteit? Dan past de mbo-opleiding Mediamaker bij jou. Als Mediamaker leer
+                je alles over
+                het opmaken van media-uitingen zoals folders, posters, brochures en posts voor socials. Je combineert
+                teksten, foto's en
+                illustraties tot mooie lay-outs.
             </p>
         </section>
         <div class="textVlak1">
-            <h2 class="title">IS AV-SPECIALIST IETS VOOR JOU?</h2>
+            <h2 class="title">IS MEDIAMAKER IETS VOOR JOU?</h2>
             <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <mask id="mask0_104_104" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="-1" y="-1" width="50"
                     height="50">
@@ -74,7 +74,7 @@
                         fill="white" stroke="white" />
                 </g>
             </svg>
-            <div class="platteTekst1">Je bent dol op techniek (licht, beeld en geluid).</div>
+            <div class="platteTekst1">Je bent gek op alles wat met media en creativiteit te maken heeft.</div>
             <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <mask id="mask0_104_104" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="-1" y="-1" width="50"
                     height="50">
@@ -86,7 +86,7 @@
                         fill="white" stroke="white" />
                 </g>
             </svg>
-            <div class="platteTekst1">Je bent creatief en je gaat graag met mensen om. </div>
+            <div class="platteTekst1">Je houdt van afwisseling en lekker productief bezig zijn. </div>
         </div>
         <div class="square">
             <p></p>
@@ -103,20 +103,7 @@
                         fill="white" stroke="white" />
                 </g>
             </svg>
-            <div class="platteTekst1">Je vindt het geen probleem om in de avonduren en weekenden te werken.
-            </div>
-            <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <mask id="mask0_104_104" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="-1" y="-1" width="50"
-                    height="50">
-                    <rect x="-0.5" y="-0.5" width="49" height="49" fill="#D9D9D9" stroke="white" />
-                </mask>
-                <g mask="url(#mask0_104_104)">
-                    <path
-                        d="M18.7466 36.3535L19.1002 36.7071L19.4537 36.3535L40.6538 15.1535L41.0073 14.8L40.6538 14.4464L37.8038 11.5964L37.4502 11.2428L37.0966 11.5964L19.1002 29.5928L10.9037 21.3964L10.5502 21.0428L10.1966 21.3964L7.34664 24.2464L6.99309 24.6L7.34664 24.9535L18.7466 36.3535Z"
-                        fill="white" stroke="white" />
-                </g>
-            </svg>
-            <div class="platteTekst1">Je kunt goed improviseren en je kunt probleemoplossend denken en werken.
+            <div class="platteTekst1">Je hebt oog voor detail en (beeld)kwaliteit en werkt graag samen met anderen,
             </div>
         </div>
         <div class="witVlak1">
@@ -125,10 +112,11 @@
         <div class="witVlak2">
             <p></p>
         </div>
-        <img src="https://s3-alpha-sig.figma.com/img/67d4/de9a/e158137da6130750f92da5edd016c7b4?Expires=1702252800&Signature=Lz~OOYwgy6VwwF9oBCIQjJyLcUtLFeQRLIxPBM4ujXC6EOMCXj1pNPBqSXjRoQThb6ebCiYZ5YdrR~2B3-41M-F89eDLnxUlbS2aMizwtuUccvz613lnZz1139ziRV8KjNpPjKzutRxT7BvV9qTVv6xFy1fogeDUDl~Vj1isufQRzIEsjyrQZGG15EKewbMLUYSxz67-Llmvs~fHPco56~eNjYctX24xJN1SgJiUJwUHxD7odciXK2T-r968jOa4YAXiiQeTOyf60dHNLXg-TEFaUZamA4ssl3BJAGb1IWwEutmJXtUvVINukaj43Var5sshKk0sQJSMlaK-U6BUuw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
-            alt="" class="img1">
+        <div class="img1Container"><img
+                src="https://s3-alpha-sig.figma.com/img/2a5c/6202/7189b93495bbdb4200cd3842312cc61e?Expires=1702252800&Signature=MkyhHyHvUsCrJ1sf9jwjZaUwvjqs~cj8Lrp5H-5Cje-aZeHiDmT4qpBe1gXM9m13myXOGmsKOSz8K03FoWLhKl4s5p0dVOJmxylwSIQrGQQ91sLRK3KYeKBjaROP7o~iZSLhTEb1M9WDf4236UplSRruR-OGAs7at-9MGfOeTD0B8ck-7VDVQVoKojfz2IImrAMbxwjJ7j1BmsZR3Vbr3EDETBtAkJBtBB5~EgnvocnIVon9bLklbR6b6NkJRyabJSyRtc25qXMKJtB1YN298L9dWpMOYAkvAPrlAoCVDmgrMrtVjk-T162hmMZ7rnDfoY1v4~iRI~IGyNuATbTdhA__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+                alt="" class="img1"></div>
         <div class="img2Container"><img
-                src="https://s3-alpha-sig.figma.com/img/3694/15d8/18962573bf743e127c55470ed23a6c39?Expires=1702252800&Signature=deLjYB9~JEAfoaia7nIoYwBoDZwI~5Sl5N2iSpN-YkdoZYUJUETc3SaB04CDpNK1BjziRdzS6oIU~PUgXTe9nlmAXJLM0EIvbTkODDnq4KrVWAMvEy-nhUIvll0azmDz9WOfRTMZA84b-SFdEsT8wCKi96lypoQq~qQ6lehnghKenHpb4F6-zT0lHdxBRNfGzZXw7hLHUsLlyf8OxZt9TFDK6DD9-3asFSTzBqgm6fubBuA9CFRsjfaO4QUjax4Xr8~35UwXXuRvdKdJ4ON6aTLUVcydJOSUapNl728PeLDXuEkzSDZ3FibMezXFObynRDupCWg5j3TYKfOLjeikkA__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+                src="https://s3-alpha-sig.figma.com/img/4262/860f/e4fef99521a92609ed07d580c2a6b300?Expires=1702252800&Signature=mg3Cwfr0cdrF7FZ9HleBvEHsqb8O6fceswD69z3oG2SsQSaMFKmlcNoO~bEDdIgRc25QJK~MeDQUJIzaMmoOZ9QxVZRMBHWTsjCnGyslOdDFjkaXHOSeTXWFNgec5SRxBEhN3MKpvPcshjpvunHNely-MsIyo-g5cFWVy3EC1jbqg10PasnmMCEPaHlxyi1dQ7bMMidbSfbU69sF8E3hD4dHZZmlnAqZ2wjsCc7I9Kn4yUcOktgkRthaar7160rBhWBz6uk88l8fzlvC~yaUHkqcCAkLhHy1iPUhdC6MlVQSvCIwgWPkVcxtyyGyPopUL5zuS52JTvVam31qhOC~SQ__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
                 alt="" class="img2"></div>
     </div>
     <p class="jaarOpbouwTitle"><span class="opleidingNaam">JAAR</span>OPBOUW</p>
@@ -137,22 +125,15 @@
         <center>
             <div class="jaar1">
                 <h4>JAAR 1</h4>
-                <p>Basis AV-vaardigheden, conceptontwikkeling, productie in groepen, montage, editen,
-                    nabewerking.</p>
+                <p>Kennismaking opleiding, werken met Adobe-software, opmaak van diverse media-uitingen,
+                    keuzedelen.</p>
             </div>
         </center>
         <center>
             <div class="jaar2">
                 <h4>JAAR 2</h4>
-                <p>Verdieping beroepsvakken, keuzedelen , individuele en teamopdrachten, voorbereiding stage,
-                    beroepsexamens.</p>
-            </div>
-        </center>
-        <center>
-            <div class="jaar3">
-                <h4>JAAR 3</h4>
-                <p>Stage, school voor verdieping, afstudeerproject, keuzedelen en beroepsexamens afsluiten,
-                    diploma.</p>
+                <p>Verdieping en verbreding van kennis, crossmediaal concept, stagevoorbereiding, stage in
+                    laatste halfjaar.</p>
             </div>
         </center>
 
