--- a/opleidingen/podium.html
+++ b/opleidingen/podium.html
@@ -8,6 +8,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grafisch Lyceum - Podium en evenementen techniek</title>
+    <script src="../js/timeout.js" defer></script>
 </head>
 
 <body>
