--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="tekst">
       <div id="tekst1"></div>
       <div class="tekst2">
-        <a class="meerinfo" href="#square-right7">SWIPE UP</a>
+        <a id="animated" class="meerinfo" href="#square-right7">SWIPE UP</a>
       </div>
     </div>
     <center><a style="color: white;" class="link" href="#square-right7"><div  class="arrow">^</div></a></center>
@@ -40,7 +40,7 @@
         <div style="display: none;" class="button3"></div>
         </div>
         </div>
-        <a class="opleiding-button button-1" ><span>MEER INFO</span></a>
+        <div class="opleiding-button button-1" onclick="modeswitch('square-right1')"  ><span>MEER INFO</span></div>
       </div>
     </section>
 
@@ -54,7 +54,7 @@
         <div class="button3"></div> 
         </div>
         </div>
-      <a class="opleiding-button button-2" ><span>MEER INFO</span></a>
+      <div class="opleiding-button button-2" onclick="modeswitchleft('square-right2')" ><span>MEER INFO</span></div>
       </div>
       <div class="opleiding left">
         <div style="margin-left: -7rem" ><h1>AUDIOVISUELE</h1><H1>MEDIA</H1></div>
@@ -75,7 +75,7 @@
         <div style="display: none;" class="button3"></div>
         </div>
         </div>
-        <a class="opleiding-button button-3" ><span>MEER INFO</span></a>
+        <div class="opleiding-button button-3"  onclick="modeswitch('square-right3')"><span>MEER INFO</span></div>
       </div>
     </section>
 
@@ -90,7 +90,7 @@
        </div>
 
         </div>
-      <a class="opleiding-button button-4" ><span>MEER INFO</span></a>
+      <div class="opleiding-button button-4" onclick="modeswitchleft('square-right4')"><span>MEER INFO</span></div>
       </div>
       <div class="opleiding left">
         <div style="margin-left: -7rem"><h1>REDACTIE</h1><H1>MEDEWERKER</H1></div>
@@ -108,12 +108,12 @@
         
         <div class="grid">
          <a class="link" href="./opleidingen/mediaMaker.html"> <div class="mediamaker button">MEDIAMAKER</div></a>
-         <a class="link" href="./opleidingen/allroundMedia.html"> <div class="button2">ALLROUND MEDIAMAKER</div></a>
+         <a class="link" href="./opleidingen/allroundMedia.html"> <div class="button2 middlebtn">ALLROUND MEDIAMAKER</div></a>
          <a class="link" href="./opleidingen/medewerker.html"> <div class="button3">MEDEWERKER SIGN</div></a>
 </div>
 
         </div>
-        <a class="opleiding-button button-5" ><span>MEER INFO</span></a>
+        <div class="opleiding-button button-5" onclick="modeswitch('square-right5')"><span>MEER INFO</span></div>
       </div>
     </section>
 
@@ -123,12 +123,12 @@
         
           <div class="grid">
          <a class="link" href="./opleidingen/software.html"> <div class="button">CREATIVE SOFTWARE DEVELOPER</div></a>
-         <a class="link" href="./opleidingen/system.html"> <div class="button2">EXPERT IT SYSTEM & DEVICES</div></a>
+         <a class="link" href="./opleidingen/system.html"> <div class="button2 middlebtn2">EXPERT IT SYSTEM & DEVICES</div></a>
         <div style="display: none;" class="button3"></div>
           </div>
 
         </div>
-      <a class="opleiding-button button-6" ><span>MEER INFO</span></a>
+      <div class="opleiding-button button-6" onclick="modeswitch('square-right7')"><span>MEER INFO</span></div>
       </div>
       <div class="opleiding left">
         <div style="margin-left: -7rem"><h1>CREATIEVE</h1><H1>PRODUCTIE</H1></div>
@@ -150,7 +150,7 @@
 </div>
 
         </div>
-        <a class="opleiding-button button-7" ><span>MEER INFO</span></a>
+        <div class="opleiding-button button-7" onclick="modeswitchleft('square-right6')" ><span>MEER INFO</span></div>
       </div>
     </section>
     <div><img class="background-img-1" src="media/Geluidssterkte Bollen 01_Groen_FC.png" alt=""></div>
