--- a/opleidingen/allroundMedia.html
+++ b/opleidingen/allroundMedia.html
@@ -14,10 +14,11 @@
 <body>
     <div class="header">
         <h1 class="opleidingTitel">
+            <div style="font-size: 30px;" class="terug">< TERUG <br> </div>
             allround <br />
             mediamaker
         </h1>
-        <a href="../index.html"><img class="headerLogo" src="../media/GLRlogo_witkader.png" alt="Glr logo banner" /></a>
+        <a href="../index.html#square-right7"><img class="headerLogo" src="../media/GLRlogo_witkader.png" alt="Glr logo banner" /></a>
     </div>
 
     <div class="container">
