--- a/opleidingen/system.html
+++ b/opleidingen/system.html
@@ -16,7 +16,7 @@
         <h1 class="opleidingTitel">
             EXPERT IT <br> SYSTEMS & <br> DEVICES
         </h1>
-        <a href="../index.html"><img class="headerLogo" src="../media/GLRlogo_witkader.png" alt="Glr logo banner" /></a>
+        <a href="../index.html#square-right7"><img class="headerLogo" src="../media/GLRlogo_witkader.png" alt="Glr logo banner" /></a>
     </div>
 
     <div class="container">
