--- a/opleidingen/mediaMaker.html
+++ b/opleidingen/mediaMaker.html
@@ -17,7 +17,7 @@
             &nbsp; <br />
             mediamaker
         </h1>
-        <a href="../index.html"><img class="headerLogo" src="../media/GLRlogo_witkader.png" alt="Glr logo banner" /></a>
+        <a href="../index.html#square-right7"><img class="headerLogo" src="../media/GLRlogo_witkader.png" alt="Glr logo banner" /></a>
     </div>
 
     <div class="container">
