--- a/opleidingen/podium.html
+++ b/opleidingen/podium.html
@@ -14,9 +14,10 @@
 <body>
     <div class="header">
         <h1 class="opleidingTitel">
+            <!-- <div style="font-size: 30px;" class="terug">< TERUG <br> </div> -->
             Podium en <br> evenementen <br>technicus
         </h1>
-        <a href="../index.html"><img class="headerLogo" src="../media/GLRlogo_witkader.png" alt="Glr logo banner" /></a>
+        <a href="../index.html#square-right7"><img class="headerLogo" src="../media/GLRlogo_witkader.png" alt="Glr logo banner" /></a>
     </div>
 
     <div class="container">
