--- a/opleidingen/software.html
+++ b/opleidingen/software.html
@@ -18,7 +18,7 @@
             software <br>
             Developer
         </h1>
-        <a href="../index.html"><img class="headerLogo" src="../media/GLRlogo_witkader.png" alt="Glr logo banner" /></a>
+        <a href="../index.html#square-right7"><img class="headerLogo" src="../media/GLRlogo_witkader.png" alt="Glr logo banner" /></a>
     </div>
 
     <div class="container">
